<?xml version="1.0" encoding="UTF-8"?>
<!-- 
Copyright (c) 2010, 2011 SAP AG and others.
All rights reserved. This program and the accompanying materials
are made available under the terms of the Eclipse Public License v1.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v10.html

Contributors:
    SAP AG - initial API and implementation

# to change version, do this steps in this project
mvn -N -DnewVersion={x.y.z}-SNAPSHOT org.eclipse.tycho:tycho-versions-plugin:set-version
#replace in this POM# <configuration><target><artifact><groupId>com.convertigo.studio</groupId>
<artifactId>neon</artifactId><version>{x.y.z}-SNAPSHOT</version>
mvn -N install
# to build studios, do this mvn command
mvn clean install
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<tycho-version>5.0.1</tycho-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

<!-- SET-VERSION --><version>8.4.0-SNAPSHOT</version>
	<groupId>com.convertigo.studio</groupId>
	<artifactId>root</artifactId>
	<packaging>pom</packaging>
	<name>RCP Convertigo Studio</name>

	<modules>
		<module>eclipse-base</module>
		<module>eclipse-feature</module>
		<module>eclipse-plugin-jxbrowser-linux64</module>
		<module>eclipse-plugin-jxbrowser-mac</module>
		<module>eclipse-plugin-jxbrowser-mac-arm</module>
		<module>eclipse-plugin-jxbrowser-win64</module>
		<module>eclipse-plugin-product</module>
		<module>eclipse-plugin-studio</module>
		<module>eclipse-repository</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>com.convertigo.studio</groupId>
							<artifactId>base</artifactId>
<!-- SET-VERSION -->		<version>8.4.0-SNAPSHOT</version>
						</artifact>
					</target>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>aarch64</arch>
						</environment>
					</environments>
					<dependency-resolution>
						<optionalDependencies>ignore</optionalDependencies>
					</dependency-resolution>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
				<version>${tycho-version}</version>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
			</plugin>
		</plugins>
	</build>
	<organization>
		<name>Convertigo</name>
		<url>https://www.convertigo.com</url>
	</organization>
</project>
